# booru-uploader-extension

./: .env  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sign.sh  types.d.ts  wxt.config.ts
assets/: tailwind.css
components/: AppButton.vue  Modal.vue  SectionHeader.vue  Spinner.vue  TaskList.vue
components/tabs/: Tab.vue  TabBar.vue
entrypoints/: background.ts  image-getter.content.ts  queue.ts
entrypoints/notifications-test-page/: NotificationsTest.vue  index.html  index.ts
entrypoints/notifications.content/: Notifications.vue  index.ts
entrypoints/options/: App.vue  HotkeyButton.vue  index.html  index.ts
entrypoints/popup/: App.vue  main.ts  testImage.ts
entrypoints/popup/e621-tab/: E621Tab.vue  SubscriptionItem.vue
entrypoints/popup/uploads-tab/: TaskList.vue  UploadsTab.vue
entrypoints/utils/imagehash-web/: cropResistantHash.js
lib/imagehash/: Cargo.toml
lib/imagehash/src/: lib.rs
pyodide/pyscripts/: compute_hash.py
styles/: colors.sass  mixins.sass  popup.sass
utils/: context-menu.ts  enums.ts  hasherWorker.ts  queue.ts  signExtension.ts  useSyncStorage.ts
