[package]
name = "imagehash-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "imagehash"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
image = { version="0.24.9", features=["jpeg", "png", "gif", "webp"] }
imagehash = "0.3.0"
wasm-bindgen = "0.2.100"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
